--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -53,3 +53,9 @@
   color: gray;
   font-size: 1.2rem;
 }
+
+.loading-container {
+  /* border: 1px solid red; */
+  text-align: center;
+  margin-top: 200px;
+}
